--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
-flask
-flask_restful
-aiohttp
-aiofiles
-bs4
-googlesearch-python==1.0.1
-gitpython
-humanize
-httpx
-heroku3
-requests
-motor>=3.1.2     
-opencv-python-headless
-pyrogram==2.0.106
-pymongo>=4.3.3  
-python-dotenv
-pymediainfo
-prettytable
-git+https://github.com/Itz-fork/py-trans.git
-reportlab
-svglib
-speedtest-cli==2.1.3
-tgcrypto 
+asyncio
+motor
+pymongo
+python-dotenv==1.0.1
+tgcrypto==1.2.5
 telegraph
-uwuify
+pillow==9.5.0
+Unidecode
+aiohttp==3.9.4
+gtts
+wget
+pyfiglet
+pydub
+pymediainfo
+opencv-python-headless
+gpytranslate
+bs4
+humanize
+aiofiles
+requests==2.31.0
+sqlalchemy==1.3.23
+SafoneAPI
+youtube-search
+youtube-search-python
+py-tgcalls==0.9.7
+git+https://github.com/yt-dlp/yt-dlp
+git+https://gitlab.com/Badmunda98/PyroB
+git+https://gitlab.com/Badmunda98/py-googletrans
